--- a/src/app/calendar-room/add-event/add-event.component.html
+++ b/src/app/calendar-room/add-event/add-event.component.html
@@ -21,6 +21,7 @@
       [matDatepicker]="startPicker"
       formControlName="startDate"
       autocomplete="off"
+      [min]="today"
     />
     <mat-datepicker-toggle
       matSuffix
@@ -33,6 +34,9 @@
       type="text"
       placeholder="Start Time"
       matInput
+      outsideClick
+      (outsideClick)="unFocusHandler($event, 'start')"
+      (keydown.Tab)="unFocusHandler($event, 'start')"
       formControlName="startTime"
       [matAutocomplete]="auto"
     />
@@ -49,6 +53,7 @@
       [matDatepicker]="endPicker"
       formControlName="endDate"
       autocomplete="off"
+      [min]="startDate.value"
     />
     <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
     <mat-datepicker #endPicker></mat-datepicker>
@@ -58,6 +63,9 @@
       type="text"
       placeholder="End Time"
       matInput
+      outsideClick
+      (outsideClick)="unFocusHandler($event, 'end')"
+      (keydown.Tab)="unFocusHandler($event, 'end')"
       formControlName="endTime"
       [matAutocomplete]="autoE"
     />
@@ -69,4 +77,6 @@
   </mat-form-field>
 </form>
 
-{{ form.value | json }}
+<div>
+  {{ form.value | json }}
+</div>
