--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import "~@angular/material/theming";
 @import "~angular-calendar/scss/angular-calendar.scss";
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
 
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -76,11 +76,6 @@ body {
   font-family: $primary-font;
   color: #292929;
   font-weight: 300;
-}
-
-// This applies to the Weekday Headers
-b {
-  font-weight: 400;
 }
 
 h1 {
@@ -156,6 +151,13 @@ $cal-bg-secondary: #fff;
 }
 
 .cal-week-view {
+  .cal-day-header-wrapper{
+    background-color: #F9F9F9;
+  }
+
+  .cal-header.cal-today {
+    background-color: #BCD8F0;
+  }
   .cal-hour:not(:last-child) .cal-hour-segment {
     border-bottom: thin;
   }
@@ -203,5 +205,37 @@ $cal-bg-secondary: #fff;
     margin: 1px;
     padding: 0 5px;
     line-height: 25px;
+  }
+  .cal-day-headers {
+    padding-left: 0px;
+    border: 0px solid;
+    border-bottom: 1px solid;
+    border-color: #e1e1e1;
+
+    // This applies to the Weekday Headers
+    b {
+      font-weight: 400;
+      text-transform: uppercase;
+    }
+    span {
+      font-size: 22px;
+    }
+    .time-label-column {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      border-right: 1px solid;
+      border-color: #e1e1e1;
+      padding: 5px;
+      width: 70px;
+      span {
+        font-weight: 300;
+        font-size: 14px;
+        opacity: 1;
+        margin-top: 5px;
+      }
+    }
+
   }
 }
