--- a/src/app/calendar-room/add-event/add-event.component.html
+++ b/src/app/calendar-room/add-event/add-event.component.html
@@ -1,8 +1,5 @@
 <form [formGroup]="form">
-  <mat-form-field
-    [color]="title.valid && 'accent'"
-    class="create-calendar-title"
-  >
+  <mat-form-field class="create-calendar-title">
     <input
       matInput
       formControlName="title"
