--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -45,167 +45,170 @@
     ></app-month-calendar>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div class="calendar-room-cal-header">
-      <div class="calendar-room-left-spacer">
-      </div>
-      <div class="calendar-room-cal-nav-but-group">
-        <button
-          mat-icon-button
-          mwlCalendarPreviousView
-          [view]="view"
-          [(viewDate)]="viewDate"
-          (viewDateChange)="closeOpenMonthViewDay()"
-        >
-          <mat-icon>keyboard_arrow_left</mat-icon>
-        </button>
-        <div>
-          <h3 class="calendar-room-cal-header-title">
-            {{ viewDate | calendarDate: view + "ViewTitle":"en" }}
-          </h3>
+    <div class="calendar-wrapper">
+      <div class="calendar-room-cal-header">
+        <div class="calendar-room-left-spacer">
+          <!-- <button mat-raised-button mwlCalendarToday [(viewDate)]="viewDate">
+            Today
+          </button> -->
         </div>
-        <button
-          mat-icon-button
-          mwlCalendarNextView
-          [view]="view"
-          [(viewDate)]="viewDate"
-          (viewDateChange)="closeOpenMonthViewDay()"
-        >
-          <mat-icon>keyboard_arrow_right</mat-icon>
-        </button>
+        <div class="calendar-room-cal-nav-but-group">
+          <button
+            mat-icon-button
+            mwlCalendarPreviousView
+            [view]="view"
+            [(viewDate)]="viewDate"
+            (viewDateChange)="closeOpenMonthViewDay()"
+          >
+            <mat-icon>keyboard_arrow_left</mat-icon>
+          </button>
+          <div>
+            <h3 class="calendar-room-cal-header-title">
+              {{ viewDate | calendarDate: view + "ViewTitle":"en" }}
+            </h3>
+          </div>
+          <button
+            mat-icon-button
+            mwlCalendarNextView
+            [view]="view"
+            [(viewDate)]="viewDate"
+            (viewDateChange)="closeOpenMonthViewDay()"
+          >
+            <mat-icon>keyboard_arrow_right</mat-icon>
+          </button>
+        </div>
+
+        <mat-button-toggle-group class="calendar-room-cal-view-but-group">
+          <mat-button-toggle
+            (click)="setView(CalendarView.Month)"
+            [class.active]="view === CalendarView.Month"
+          >
+            Month
+          </mat-button-toggle>
+          <mat-button-toggle
+            (click)="setView(CalendarView.Week)"
+            [class.active]="view === CalendarView.Week"
+          >
+            Week
+          </mat-button-toggle>
+          <mat-button-toggle
+            (click)="setView(CalendarView.Day)"
+            [class.active]="view === CalendarView.Day"
+          >
+            Day
+          </mat-button-toggle>
+        </mat-button-toggle-group>
       </div>
 
-      <mat-button-toggle-group class="calendar-room-cal-view-but-group">
-        <mat-button-toggle
-          (click)="setView(CalendarView.Month)"
-          [class.active]="view === CalendarView.Month"
-        >
-          Month
-        </mat-button-toggle>
-        <mat-button-toggle
-          (click)="setView(CalendarView.Week)"
-          [class.active]="view === CalendarView.Week"
-        >
-          Week
-        </mat-button-toggle>
-        <mat-button-toggle
-          (click)="setView(CalendarView.Day)"
-          [class.active]="view === CalendarView.Day"
-        >
-          Day
-        </mat-button-toggle>
-      </mat-button-toggle-group>
-    </div>
-
-    <!-- Template to get rid of 12 am in the time label column -->
-    <ng-template
-      #customTimeLabelTemplate
-      let-segment="segment"
-      let-locale="locale"
-      let-segmentHeight="segmentHeight"
-      let-isTimeLabel="isTimeLabel"
-    >
-      <div
-        #segmentElement
-        class="cal-hour-segment"
-        [style.height.px]="segmentHeight"
-        [class.cal-hour-start]="segment.isStart"
-        [class.cal-after-hour-start]="!segment.isStart"
-        [ngClass]="segment.cssClass"
-        (mousedown)="startDragToCreate(segment, $event, segmentElement)"
+      <!-- Template to get rid of 12 am in the time label column -->
+      <ng-template
+        #customTimeLabelTemplate
+        let-segment="segment"
+        let-locale="locale"
+        let-segmentHeight="segmentHeight"
+        let-isTimeLabel="isTimeLabel"
       >
-        <div class="calculations"  *ngIf="isTimeLabel">
-          <div *ngIf="(segment.date | calendarDate:'weekViewHour':locale) as result">
-            <div class = "cal-time" *ngIf="result != '12 AM'">
-              {{ result }}
+        <div
+          #segmentElement
+          class="cal-hour-segment"
+          [style.height.px]="segmentHeight"
+          [class.cal-hour-start]="segment.isStart"
+          [class.cal-after-hour-start]="!segment.isStart"
+          [ngClass]="segment.cssClass"
+          (mousedown)="startDragToCreate(segment, $event, segmentElement)"
+        >
+          <div class="calculations"  *ngIf="isTimeLabel">
+            <div *ngIf="(segment.date | calendarDate:'weekViewHour':locale) as result">
+              <div class = "cal-time" *ngIf="result != '12 AM'">
+                {{ result }}
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </ng-template>
+      </ng-template>
 
-    <!-- Template to Get rid of the current day and the weekends -->
-    <ng-template
-          #customTemplate
-          let-days="days"
-          let-locale="locale"
-          let-dayHeaderClicked="dayHeaderClicked"
-          let-eventDropped="eventDropped"
-          let-trackByWeekDayHeaderDate="trackByWeekDayHeaderDate"
-          let-dragEnter="dragEnter"
-        >
-        <div class="cal-day-header-wrapper">
+      <!-- Template to Get rid of the current day and the weekends -->
+      <ng-template
+            #customTemplate
+            let-days="days"
+            let-locale="locale"
+            let-dayHeaderClicked="dayHeaderClicked"
+            let-eventDropped="eventDropped"
+            let-trackByWeekDayHeaderDate="trackByWeekDayHeaderDate"
+            let-dragEnter="dragEnter"
+          >
+          <div class="cal-day-header-wrapper">
+            <div class="cal-day-headers" role="row">
+              <div class="time-label-column">
+                  <mat-icon> access_time </mat-icon>
+                  <span> {{ timezone }}</span>
 
-
-          <div class="cal-day-headers" role="row">
-            <div class="time-label-column">
-                <mat-icon> access_time </mat-icon>
-                <span> {{ timezone }}</span>
-
-            </div>
-            <div
-              class="cal-header"
-              *ngFor="let day of days; trackBy: trackByWeekDayHeaderDate"
-              [class.cal-past]="day.isPast"
-              [class.cal-today]="day.isToday"
-              [class.cal-future]="day.isFuture"
-              [ngClass]="day.cssClass"
-              (mwlClick)="dayHeaderClicked.emit({ day: day, sourceEvent: $event })"
-              mwlDroppable
-              dragOverClass="cal-drag-over"
-              (drop)="
-                eventDropped.emit({
-                  event: $event.dropData.event,
-                  newStart: day.date
-                })
-              "
-              (dragEnter)="dragEnter.emit({ date: day.date })"
-              tabindex="0"
-              role="columnheader"
-            >
-              <b>{{ day.date | calendarDate: 'weekViewColumnHeader':locale }}</b
-              ><br />
-              <span>{{
-                day.date | calendarDate: 'weekViewColumnSubHeader':locale
-              }}</span>
+              </div>
+              <div
+                class="cal-header"
+                *ngFor="let day of days; trackBy: trackByWeekDayHeaderDate"
+                [class.cal-past]="day.isPast"
+                [class.cal-today]="day.isToday"
+                [class.cal-future]="day.isFuture"
+                [ngClass]="day.cssClass"
+                (mwlClick)="dayHeaderClicked.emit({ day: day, sourceEvent: $event })"
+                mwlDroppable
+                dragOverClass="cal-drag-over"
+                (drop)="
+                  eventDropped.emit({
+                    event: $event.dropData.event,
+                    newStart: day.date
+                  })
+                "
+                (dragEnter)="dragEnter.emit({ date: day.date })"
+                tabindex="0"
+                role="columnheader"
+              >
+                <b>{{ day.date | calendarDate: 'weekViewColumnHeader':locale }}</b
+                ><br />
+                <span>{{
+                  day.date | calendarDate: 'weekViewColumnSubHeader':locale
+                }}</span>
+              </div>
             </div>
           </div>
-        </div>
-        </ng-template>
+          </ng-template>
 
 
-    <div [ngSwitch]="view">
-      <mwl-calendar-month-view
-        *ngSwitchCase="CalendarView.Month"
-        [viewDate]="viewDate"
-        [events]="events"
-        [refresh]="refresh"
-        [activeDayIsOpen]="activeDayIsOpen"
-        (dayClicked)="dayClicked($event.day)"
-        (eventClicked)="handleEvent('Clicked', $event.event)"
-        (eventTimesChanged)="eventTimesChanged($event)"
-      >
-      </mwl-calendar-month-view>
-      <mwl-calendar-week-view
-        *ngSwitchCase="CalendarView.Week"
-        [viewDate]="viewDate"
-        [events]="events"
-        [refresh]="refresh"
-        [hourSegmentTemplate]="customTimeLabelTemplate"
-        [headerTemplate]="customTemplate"
-        (eventClicked)="handleEvent('Clicked', $event.event)"
-        (eventTimesChanged)="eventTimesChanged($event)"
-      >
-      </mwl-calendar-week-view>
-      <mwl-calendar-day-view
-        *ngSwitchCase="CalendarView.Day"
-        [viewDate]="viewDate"
-        [events]="events"
-        [refresh]="refresh"
-        [hourSegmentTemplate]="customTimeLabelTemplate"
-        (eventClicked)="handleEvent('Clicked', $event.event)"
-        (eventTimesChanged)="eventTimesChanged($event)"
-      >
-      </mwl-calendar-day-view>
+      <div [ngSwitch]="view">
+        <mwl-calendar-month-view
+          *ngSwitchCase="CalendarView.Month"
+          [viewDate]="viewDate"
+          [events]="events"
+          [refresh]="refresh"
+          [activeDayIsOpen]="activeDayIsOpen"
+          (dayClicked)="dayClicked($event.day)"
+          (eventClicked)="handleEvent('Clicked', $event.event)"
+          (eventTimesChanged)="eventTimesChanged($event)"
+        >
+        </mwl-calendar-month-view>
+        <mwl-calendar-week-view
+          *ngSwitchCase="CalendarView.Week"
+          [viewDate]="viewDate"
+          [events]="events"
+          [refresh]="refresh"
+          [hourSegmentTemplate]="customTimeLabelTemplate"
+          [headerTemplate]="customTemplate"
+          (eventClicked)="handleEvent('Clicked', $event.event)"
+          (eventTimesChanged)="eventTimesChanged($event)"
+        >
+        </mwl-calendar-week-view>
+        <mwl-calendar-day-view
+          *ngSwitchCase="CalendarView.Day"
+          [viewDate]="viewDate"
+          [events]="events"
+          [refresh]="refresh"
+          [hourSegmentTemplate]="customTimeLabelTemplate"
+          (eventClicked)="handleEvent('Clicked', $event.event)"
+          (eventTimesChanged)="eventTimesChanged($event)"
+        >
+        </mwl-calendar-day-view>
+      </div>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
