--- a/src/app/calendar-room/add-event/add-event.component.html
+++ b/src/app/calendar-room/add-event/add-event.component.html
@@ -1,18 +1,9 @@
 <form [formGroup]="form">
-<<<<<<< HEAD
-<<<<<<< HEAD
-  <mat-form-field
-    class="create-calendar-title"
-  >
-=======
   <mat-form-field class="create-calendar-title">
->>>>>>> 275f459694127ec7c1f2747a288248d6cb5c8ed8
-=======
+
   <mat-form-field
     [color]="title.valid && 'accent'"
-    class="create-calendar-title"
-  >
->>>>>>> parent of 275f459... Highlight by default
+    class="create-calendar-title">
     <input
       matInput
       formControlName="title"
@@ -85,6 +76,7 @@
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
+</mat-form-field>
 </form>
 
 <div>
