--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -113,6 +113,15 @@
         let-segmentHeight="segmentHeight"
         let-isTimeLabel="isTimeLabel"
       >
+      <div
+        #segmentElement
+        class="cal-hour-segment"
+        [style.height.px]="segmentHeight"
+        [class.cal-hour-start]="segment.isStart"
+        [class.cal-after-hour-start]="!segment.isStart"
+        [ngClass]="segment.cssClass"
+        (mousedown)="startDragToCreate(segment, $event, segmentElement)"
+      >
         <div class="calculations" *ngIf="isTimeLabel">
           <div
             *ngIf="segment.date | calendarDate: 'weekViewHour':locale as result"
@@ -125,7 +134,7 @@
       </div>
     </ng-template>
 
-    <!-- Template to Get rid of the current day and the weekends -->
+    <!-- Template to Get rid of the weekends -->
     <ng-template
       #customTemplate
       let-days="days"
@@ -135,7 +144,6 @@
       let-trackByWeekDayHeaderDate="trackByWeekDayHeaderDate"
       let-dragEnter="dragEnter"
     >
-      <div class="cal-day-header-wrapper">
         <div class="cal-day-headers" role="row">
           <div class="time-label-column">
             <mat-icon> access_time </mat-icon>
@@ -170,7 +178,6 @@
             }}</span>
           </div>
         </div>
-      </div>
     </ng-template>
 
       <div [ngSwitch]="view">
