--- a/src/styles.scss
+++ b/src/styles.scss
@@ -211,6 +211,7 @@ $cal-bg-secondary: #fff;
     border: 0px solid;
     border-bottom: 1px solid;
     border-color: #e1e1e1;
+    background-color: #F9F9F9;
 
     // This applies to the Weekday Headers
     b {
