--- a/src/app/calendar-room/add-event/add-event.component.html
+++ b/src/app/calendar-room/add-event/add-event.component.html
@@ -1,6 +1,5 @@
-<form [formGroup]="form">
-  <mat-form-field class="create-calendar-title">
-
+<form [formGroup]="form" (ngSubmit)="submit()">
+  <mat-form-field class="create-event-title">
     <input
       matInput
       formControlName="title"
@@ -12,69 +11,74 @@
       You must have a title for the event
     </mat-error>
   </mat-form-field>
-  <mat-form-field>
-    <mat-label>Start Date</mat-label>
-    <input
-      matInput
-      [matDatepicker]="startPicker"
-      formControlName="startDate"
-      autocomplete="off"
-      [min]="today"
-    />
-    <mat-datepicker-toggle
-      matSuffix
-      [for]="startPicker"
-    ></mat-datepicker-toggle>
-    <mat-datepicker #startPicker></mat-datepicker>
-  </mat-form-field>
-  <mat-form-field>
-    <input
-      type="text"
-      placeholder="Start Time"
-      matInput
-      outsideClick
-      (outsideClick)="unFocusHandler($event, 'start')"
-      (keydown.Tab)="unFocusHandler($event, 'start')"
-      formControlName="startTime"
-      [matAutocomplete]="auto"
-    />
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of startTimeOptions" [value]="option">
-        {{ option }}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>End Date</mat-label>
-    <input
-      matInput
-      [matDatepicker]="endPicker"
-      formControlName="endDate"
-      autocomplete="off"
-      [min]="startDate.value"
-    />
-    <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
-    <mat-datepicker #endPicker></mat-datepicker>
-  </mat-form-field>
-  <mat-form-field>
-    <input
-      type="text"
-      placeholder="End Time"
-      matInput
-      outsideClick
-      (outsideClick)="unFocusHandler($event, 'end')"
-      (keydown.Tab)="unFocusHandler($event, 'end')"
-      formControlName="endTime"
-      [matAutocomplete]="autoE"
-    />
-    <mat-autocomplete #autoE="matAutocomplete">
-      <mat-option *ngFor="let option of endTimeOptions" [value]="option">
-        {{ option }}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
+  <div class="create-event-time">
+    <mat-form-field class="create-event-date-field">
+      <mat-label>Start Date</mat-label>
+      <input
+        matInput
+        [matDatepicker]="startPicker"
+        formControlName="startDate"
+        autocomplete="off"
+      />
+      <mat-datepicker-toggle
+        matSuffix
+        [for]="startPicker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #startPicker></mat-datepicker>
+    </mat-form-field>
+    <mat-form-field class="create-event-time-field">
+      <input
+        type="text"
+        placeholder="Start Time"
+        matInput
+        outsideClick
+        (outsideClick)="unFocusHandler($event, 'start')"
+        (keydown.Tab)="unFocusHandler($event, 'start')"
+        formControlName="startTime"
+        [matAutocomplete]="auto"
+      />
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let option of startTimeOptions" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <mat-form-field class="create-event-time-field">
+      <input
+        type="text"
+        placeholder="End Time"
+        matInput
+        outsideClick
+        (outsideClick)="unFocusHandler($event, 'end')"
+        (keydown.Tab)="unFocusHandler($event, 'end')"
+        formControlName="endTime"
+        [matAutocomplete]="autoE"
+      />
+      <mat-autocomplete #autoE="matAutocomplete">
+        <mat-option *ngFor="let option of endTimeOptions" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <mat-form-field class="create-event-date-field">
+      <mat-label>End Date</mat-label>
+      <input
+        matInput
+        [matDatepicker]="endPicker"
+        formControlName="endDate"
+        autocomplete="off"
+        [min]="startDate.value"
+      />
+      <mat-datepicker-toggle
+        matSuffix
+        [for]="endPicker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #endPicker></mat-datepicker>
+    </mat-form-field>
+  </div>
+  <div class="add-event-button">
+    <button [disabled]="form.invalid" mat-raised-button color="primary">
+      Add Event
+    </button>
+  </div>
 </form>
-
-<div>
-  {{ form.value | json }}
-</div>
