--- a/src/styles.scss
+++ b/src/styles.scss
@@ -237,6 +237,9 @@ $cal-bg-secondary: #fff;
         margin-top: 5px;
       }
     }
-
   }
+}
+
+.mat-drawer-side {
+  border-right: solid 0px;
 }
