--- a/src/app/calendar-room/calendar-room.component.scss
+++ b/src/app/calendar-room/calendar-room.component.scss
@@ -4,7 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 90vh;
+  height: 100%;
   background: #fcfcfc;
 }
 
@@ -16,6 +16,15 @@
 .calendar-room-title-container {
   display: flex;
   align-items: center;
+  margin-left:20px;
+  margin-block-start: 1.5em;
+  margin-block-end: 1.5em;
+}
+
+.calendar-room-title {
+  font-size: xx-large;
+  font-weight: 600;
+  margin-left: 10px;
 }
 
 .calendar-room-cal-header {
@@ -50,6 +59,39 @@
   align-items: center;
 }
 
+.calendar-wrapper {
+  border-radius: 25px;
+  overflow: hidden;
+  margin: 0px 20px 20px 20px;
+  box-shadow: 2px 7px 16px -1px rgba(212,212,212,1);
+}
+
 .favorite-button {
   color: #daa520;
+}
+
+.sidebar-wrapper {
+  width: 275px;
+  background-color: #fcfcfc;
+}
+
+.sidebar {
+  display: flex;
+  justify-content: center;
+}
+
+.sidebar-button {
+  width: 85%;
+  height: 4.5em;
+  display:flex;
+  justify-content: space-around;
+  align-items:center;
+  margin-top:6.3em;
+}
+
+.siderbar-button-name {
+  font-weight: 600;
+  font-size: large;
+  text-transform: uppercase;
+  padding-left:22.5px;
 }
