--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -57,6 +57,7 @@
           <span>Settings</span>
         </a>
       </mat-menu>
+      <mat-icon> notifications </mat-icon>
     </mat-toolbar>
 
     <!-- TRANSCLUSION -->
