--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -3,10 +3,11 @@
 }
 
 .logo {
-  font-size: 1.6em;
+  font-size: 2em;
   cursor: pointer;
   outline: none;
-  color: #707070;
+  color: #69845C;
+  font-weight: 500;
 }
 
 .mat-drawer-side {
