--- a/src/app/calendar-room/calendar-room.component.scss
+++ b/src/app/calendar-room/calendar-room.component.scss
@@ -16,7 +16,6 @@
 .calendar-room-title-container {
   display: flex;
   align-items: center;
-  margin-left:20px;
   margin-block-start: 1.5em;
   margin-block-end: 1.5em;
 }
@@ -75,7 +74,7 @@
   background-color: #fcfcfc;
 }
 
-.sidebar {
+.sidebar-button-wrapper {
   display: flex;
   justify-content: center;
 }
@@ -84,14 +83,14 @@
   width: 80%;
   height: 3.5em;
   display:flex;
-  justify-content: space-around;
   align-items:center;
   margin-top:6.3em;
 }
 
-.share-button-wrapper {
-  margin-left:3em;
-  margin-top: 1em;
+.sidebar-button-elements {
+  display: flex;
+  align-items: center;
+  margin-left:1em;
 }
 
 .sidebar-button-name {
