just added color theme for angular materials to light green - dark green

--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -4,10 +4,10 @@
 
 .logo {
   font-size: 2em;
+  font-weight: 500;
   cursor: pointer;
   outline: none;
-  color: #69845C;
-  font-weight: 500;
+  color: #87a27b;
 }
 
 .mat-drawer-side {
