--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,43 +14,45 @@
 
 // http://mcg.mbitson.com/
 $ft-palette: (
-  50: #e8eaf6,
-  100: #c5cbe9,
-  200: #9fa8da,
-  300: #7985cb,
-  400: #5c6bc0,
-  500: #3f51b5,
-  600: #394aae,
-  700: #3140a5,
-  800: #29379d,
-  900: #1b278d,
-  A100: #c6cbff,
-  A200: #939dff,
-  A400: #606eff,
-  A700: #4757ff,
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #ffffff,
-    500: #ffffff,
-    600: #ffffff,
-    700: #ffffff,
-    800: #ffffff,
-    900: #ffffff,
-    A100: #000000,
-    A200: #000000,
-    A400: #ffffff,
-    A700: #ffffff,
-  ),
+50 : #eef2ec,
+100 : #d5ded1,
+200 : #b9c8b2,
+300 : #9cb293,
+400 : #87a27b,
+500 : #729164,
+600 : #6a895c,
+700 : #5f7e52,
+800 : #557448,
+900 : #426236,
+A100 : #c7ffb3,
+A200 : #a1ff80,
+A400 : #7bff4d,
+A700 : #68ff34,
+contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+),
 );
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ft-primary: mat-palette($ft-palette);
+$ft-primary: mat-palette($ft-palette, 400);
 $ft-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// $ft-button-primary
 
 // The warn palette is optional (defaults to red).
 $ft-warn: mat-palette($mat-red);
@@ -136,6 +138,7 @@ $cal-bg-secondary: #fff;
       bg-secondary: $cal-bg-secondary,
   )
 );
+
 
 .cal-week-view .cal-time-events {
   max-height: 750px;
@@ -238,6 +241,11 @@ $cal-bg-secondary: #fff;
       }
     }
   }
+}
+
+// changes the text and mat icon color of all angular material raised buttons
+.mat-raised-button.mat-primary {
+  color: white;
 }
 
 .mat-drawer-side {
