--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -50,3 +50,10 @@ i {
   display: flex;
   align-items: flex-start;
 }
+
+.mat-toolbar-single-row {
+  box-shadow: 0px 7px 24px -18px rgba(161,161,161,1);
+  background-color: white;
+  position:relative;
+  z-index: 10;
+}
