microsoft calendar testing still

--- a/src/app/calendar-room/add-calendar/add-calendar.component.html
+++ b/src/app/calendar-room/add-calendar/add-calendar.component.html
@@ -1,5 +1,5 @@
 <h4 class="add-calendar-title">Add Events</h4>
-<p>Two weeks of events from selecrted calendars will be copied to the room.</p>
+<p>Two weeks of events from selected calendars will be copied to the room.</p>
 <form [formGroup]="form" (ngSubmit)="submit()">
   <div
     formArrayName="orders"
