--- a/src/app/shared/components/user-bar/user-bar.component.scss
+++ b/src/app/shared/components/user-bar/user-bar.component.scss
@@ -20,6 +20,6 @@
   font-size: 1em;
   line-height: var(--diameter);
   text-align: center;
-  color: #222b45;
-  background: #edf2f8;
+  background-color: #dfdcdc;
+  color: #707070;
 }
