--- a/src/app/calendar-room/add-calendar/add-calendar.component.html
+++ b/src/app/calendar-room/add-calendar/add-calendar.component.html
@@ -1,6 +1,8 @@
 <h4 class="add-calendar-title">Add Events</h4>
 <p>Two weeks of events from selected calendars will be copied to the room.</p>
-<div *ngIf="this.gapiStatus; else msalCheck">
+
+<!-- Google Sign In Template -->
+<div *ngIf="this.gapiStatus">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div
       formArrayName="orders"
@@ -20,22 +22,26 @@
   </form>
 </div>
 
-<ng-template #msalCheck>
-  <ng-container  *ngIf="this.msalStatus">
-    <form [formGroup]="form" (ngSubmit)="submit()">
-      <div
-        formArrayName="orders"
-        *ngFor="let order of getControls(); let i = index"
+<!-- Msal Sign In Template -->
+<ng-container  *ngIf="this.msalStatus">
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <div
+      formArrayName="orders"
+      *ngFor="let order of getControls(); let i = index"
+    >
+      <mat-checkbox [formControlName]="i">
+        {{
+          data.calendars[i].name
+        }}</mat-checkbox
       >
-        <mat-checkbox [formControlName]="i">
-          {{
-            data.calendars[i].name
-          }}</mat-checkbox
-        >
-      </div>
-      <div class="add-calendar-button">
-        <button mat-raised-button color="primary">Add Calendar</button>
-      </div>
-    </form>
-  </ng-container>
+    </div>
+    <div class="add-calendar-button">
+      <button mat-raised-button color="primary">Add Calendar</button>
+    </div>
+  </form>
+</ng-container>
+
+<!-- Error Checking, if we couldn't tell if they were using google or microsoft login -->
+<ng-template *ngIf="!this.msalStatus && this.gapiStatus">
+  <span> Hey, we couldn't find your calendar provider. Try again? </span>
 </ng-template>
