--- a/src/app/calendar-room/room-member-list/room-member-list.component.scss
+++ b/src/app/calendar-room/room-member-list/room-member-list.component.scss
@@ -10,6 +10,18 @@
   margin-left: 2em;
 }
 
+.user-text {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: large;
+  background-color: #dfdcdc;
+  color: #707070;
+}
 
 .user-nickname {
   font-weight:500;
