--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -51,6 +51,19 @@ i {
   align-items: flex-start;
 }
 
+.avatar-text {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: large;
+  background-color: #dfdcdc;
+  color: #707070;
+}
+
 .mat-toolbar-single-row {
   box-shadow: 0px 7px 24px -18px rgba(161,161,161,1);
   background-color: white;
