--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -12,7 +12,18 @@
   </div>
 
   <div *ngIf="auth.user$ | async as user" class="logout">
-    <img src="{{ user.photoURL }}" width="50px" />
+    <!-- Uses either a given photoURL or the default one with the first letter of their display name -->
+    <div class="avatar-wrapper">
+      <ng-container *ngIf="user.photoURL">
+        <img src="{{ user.photoURL }}" width="50px"/>
+      </ng-container>
+      <ng-container *ngIf="!user.photoURL">
+        <div class="avatar-text">
+          <span> {{ user.displayName[0] }}</span>
+        </div>
+      </ng-container>
+    </div>
+
     <p>
       Logged in as <strong>{{ user.email }}</strong>
     </p>
