added color codes to calendar-room

--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -96,7 +96,7 @@
     <!-- This block represents the header for the calendar and the calendar grid together -->
     <div class="calendar-wrapper">
       <div class="calendar-room-cal-header">
-        <div class="calendar-room-left-spacer">s
+        <div class="calendar-room-left-spacer">
           <!-- <button mat-raised-button mwlCalendarToday [(viewDate)]="viewDate">
             Today
           </button> -->
