--- a/src/app/calendar-room/add-calendar/add-calendar.component.html
+++ b/src/app/calendar-room/add-calendar/add-calendar.component.html
@@ -1,9 +1,10 @@
-<h4 class="add-calendar-title">Add Events</h4>
+<h3 class="add-calendar-title">Add Events</h3>
 <p>Two weeks of events from selected calendars will be copied to the room.</p>
 
 <!-- Google Sign In Template -->
 
   <form [formGroup]="form" (ngSubmit)="submit()">
+      <h4 *ngIf="this.data.googleCal.length > 0"> Google Calendars </h4>
       <div
         formArrayName="g_calendar"
         *ngFor="let order of getGCalControls(); let i = index"
@@ -16,10 +17,12 @@
           }}</mat-checkbox
         >
       </div>
+      <h4 *ngIf="this.data.microsoftCal.length > 0"> Microsoft Calendars</h4>
       <div
         formArrayName="ms_calendar"
         *ngFor="let order of getMsCalControls(); let i = index"
       >
+
         <mat-checkbox [formControlName]="i">
           {{
             data.microsoftCal[i].name
