--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -28,8 +28,9 @@
   <mat-sidenav class="sidebar-wrapper" mode="side" opened>
     <div class="sidebar-button-wrapper">
       <button class="sidebar-button" mat-raised-button color="primary"
-        appDebounceClick (debounceClick)="log()"
-
+        appPreventDoubleClick
+        (throttledClick)="openAddCalDialog()"
+        [throttleTime]="3000"
       >
         <div class="sidebar-button-elements">
           <mat-icon> calendar_today </mat-icon>
@@ -55,6 +56,7 @@
         </div>
       </button>
     </div>
+
     <ng-container *ngIf="{ room: room$ | async, member: member$ | async } as roomMemDoc">
       <ng-container *ngIf="roomMemDoc.room as room">
         <div class="calendar-room-toolbar-members">
